--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         conhecer!</a>
                 </div>
                 <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png"
-                    alt="A imagem apresenta os personagens do desenho cooby-doo interagindo"
+                    alt="A imagem apresenta uma mulher fisiculturista"
                     title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
             </div>
@@ -137,3 +137,4 @@
 </body>
 
 </html>
+
